--- a/genindex.html
+++ b/genindex.html
@@ -1,19 +1,18 @@
 
-
 <!DOCTYPE html>
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Index &#8212; SymbiFlow CLI  documentation</title>
-    <link rel="stylesheet" href="_static/classic.css" type="text/css" />
-    <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
+    <link rel="stylesheet" type="text/css" href="_static/classic.css" />
     
-    <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
+    <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
     <script src="_static/jquery.js"></script>
     <script src="_static/underscore.js"></script>
     <script src="_static/doctools.js"></script>
-    <script src="_static/language_data.js"></script>
     
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" /> 
@@ -27,7 +26,8 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">SymbiFlow CLI  documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">SymbiFlow CLI  documentation</a> &#187;</li>
+        <li class="nav-item nav-item-this"><a href="">Index</a></li> 
       </ul>
     </div>  
 
@@ -42,6 +42,7 @@
 <div class="genindex-jumpbox">
  <a href="#B"><strong>B</strong></a>
  | <a href="#I"><strong>I</strong></a>
+ | <a href="#M"><strong>M</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#S"><strong>S</strong></a>
  
@@ -62,6 +63,19 @@
   </ul></td>
 </tr></table>
 
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    module
+
+      <ul>
+        <li><a href="api.html#module-symbiflow.symbiflow">symbiflow.symbiflow</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -77,12 +91,17 @@
 </li>
       <li><a href="api.html#symbiflow.symbiflow.SymbiFlow.set_part">set_part() (symbiflow.symbiflow.SymbiFlow method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#symbiflow.symbiflow.SymbiFlow">SymbiFlow (class in symbiflow.symbiflow)</a>
 </li>
-      <li><a href="api.html#module-symbiflow.symbiflow">symbiflow.symbiflow (module)</a>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    symbiflow.symbiflow
+
+      <ul>
+        <li><a href="api.html#module-symbiflow.symbiflow">module</a>
 </li>
+      </ul></li>
       <li><a href="api.html#symbiflow.symbiflow.SymbiFlow.synthesis">synthesis() (symbiflow.symbiflow.SymbiFlow method)</a>
 </li>
   </ul></td>
@@ -90,6 +109,7 @@
 
 
 
+            <div class="clearer"></div>
           </div>
         </div>
       </div>
@@ -118,12 +138,13 @@
         <li class="right" >
           <a href="py-modindex.html" title="Python Module Index"
              >modules</a> |</li>
-        <li class="nav-item nav-item-0"><a href="index.html">SymbiFlow CLI  documentation</a> &#187;</li> 
+        <li class="nav-item nav-item-0"><a href="index.html">SymbiFlow CLI  documentation</a> &#187;</li>
+        <li class="nav-item nav-item-this"><a href="">Index</a></li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
         &#169; Copyright 2021, Rodrigo A. Melo.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 2.4.4.
+      Created using <a href="https://www.sphinx-doc.org/">Sphinx</a> 4.0.2.
     </div>
   </body>
 </html>
