--- a/genindex.html
+++ b/genindex.html
@@ -41,7 +41,6 @@
 
 <div class="genindex-jumpbox">
  <a href="#B"><strong>B</strong></a>
- | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#S"><strong>S</strong></a>
@@ -51,14 +50,6 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#symbiflow.symbiflow.SymbiFlow.bitstream">bitstream() (symbiflow.symbiflow.SymbiFlow method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="I">I</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="api.html#symbiflow.symbiflow.SymbiFlow.implementation">implementation() (symbiflow.symbiflow.SymbiFlow method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -78,6 +69,10 @@
 
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="api.html#symbiflow.symbiflow.SymbiFlow.pnr">pnr() (symbiflow.symbiflow.SymbiFlow method)</a>
+</li>
+  </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="api.html#symbiflow.symbiflow.SymbiFlow.programming">programming() (symbiflow.symbiflow.SymbiFlow method)</a>
 </li>
